@@ -1,29 +1,40 @@
 package view;
 
-import domain.Artist;
 import domain.Gallery;
 import javafx.collections.FXCollections;
 import javafx.collections.ObservableList;
 import javafx.geometry.Insets;
 import javafx.geometry.Pos;
+import javafx.scene.Scene;
 import javafx.scene.control.*;
 import javafx.scene.image.Image;
 import javafx.scene.image.ImageView;
 import javafx.scene.layout.BorderPane;
 import javafx.scene.layout.HBox;
 import javafx.scene.layout.VBox;
-import locality.RegionList;
-import presenter.MainCreateArtists;
-import presenter.MainCreateGallery;
+import javafx.stage.FileChooser;
+import javafx.stage.Stage;
+import presenter.MainGetRegions;
+import presenter.MainManageGallery;
 
+import java.io.File;
+import java.io.IOException;
+import java.nio.file.Files;
+import java.nio.file.StandardCopyOption;
+import java.util.List;
 import java.util.Objects;
 
 public class CreateGalleryView extends BorderPane {
 
     private TextField textFieldGalleryName;
     private TextField textFieldEmail;
+    private TextField textFieldRefenceImage;
     private ComboBox<String> statusMenu;
     private Label labelSucessMensage;
+    private String refenceImage;
+    private File selectedFile;
+    private ImageView imageView;
+
 
     public CreateGalleryView() {
         doLayout();
@@ -44,11 +55,30 @@ public class CreateGalleryView extends BorderPane {
         setTop(vBoxTop);
 
         // ---------------------------------------------- CENTER LAYOUT ----------------------------------------------
+        // ADD IMAGE - FILE CHOOSER
+        imageView = new ImageView();
+        imageView.setFitWidth(400);
+        imageView.setFitHeight(400);
+
+        Button attachImageButton = new Button("Carregar Imagem");
+        attachImageButton.setOnAction(event -> openFileChooser());
+        attachImageButton.getStyleClass().add("button-modern");
+
+        Button viewimageButton = new Button("Visualizar Imagem");
+        viewimageButton.setOnAction(event -> viewImage());
+        viewimageButton.getStyleClass().add("button-modern");
+
+        Button removeImageButton = new Button("Remover imagem");
+        removeImageButton.getStyleClass().add("button-modern");
+        removeImageButton.setOnAction(event -> removeImage());
+
         // COMBO BOX
-        ObservableList<String> statusOptions = FXCollections.observableArrayList(
-                RegionList.getAllRegion()
+
+        List<String> regionList;
+        ObservableList<String> regionOptions = FXCollections.observableArrayList(
+                regionList = MainGetRegions.getAllRegions()
         );
-        this.statusMenu = new ComboBox<>(statusOptions);
+        this.statusMenu = new ComboBox<>(regionOptions);
         statusMenu.setMaxWidth(120);
         statusMenu.setValue("Região");
         statusMenu.getStyleClass().add("combo-box");
@@ -56,16 +86,27 @@ public class CreateGalleryView extends BorderPane {
         // LABELS
         Label labelGalleryName = new Label("Nome da Galeria (max. 100 caracteres):");
         Label labelEmail = new Label("Email:");
+        Label labelReferenceImage = new Label("Caminho referencia da imagem");
 
         this.textFieldGalleryName = new TextField();
         this.textFieldEmail = new TextField();
+        this.textFieldRefenceImage = new TextField(refenceImage);
+        textFieldRefenceImage.setDisable(true);
+
+        HBox hBoxButtonImage = new HBox(attachImageButton, viewimageButton, removeImageButton);
+        VBox vBoxRefImageLabelAndText = new VBox(labelReferenceImage,textFieldRefenceImage);
+        VBox vBoxReferenceImage = new VBox(vBoxRefImageLabelAndText, hBoxButtonImage);
 
         VBox vBoxArtistName = new VBox(labelGalleryName,textFieldGalleryName);
         VBox vBoxEmail = new VBox(labelEmail,textFieldEmail);
-        VBox vBoxArtistInfo = new VBox(vBoxArtistName, vBoxEmail);
+
+        VBox vBoxArtistInfo = new VBox(vBoxArtistName, vBoxEmail, vBoxReferenceImage);
+
         VBox vBoxStatusRegion = new VBox(statusMenu);
         HBox hBoxCenterLayout = new HBox(vBoxArtistInfo,vBoxStatusRegion);
 
+        hBoxButtonImage.setSpacing(10);
+        vBoxReferenceImage.setSpacing(10);
         hBoxCenterLayout.setSpacing(50);
         vBoxArtistInfo.setSpacing(10);
         vBoxArtistInfo.setPrefWidth(520);
@@ -82,13 +123,19 @@ public class CreateGalleryView extends BorderPane {
     private VBox getFooterBox (){
         // Buttons
         Button createGalleryButton = new Button("Criar Galleria");
-        Button cancelButton = new Button("Cancelar");
-
         createGalleryButton.getStyleClass().add("button-modern");
+
+        createGalleryButton.setOnAction(event -> {
+            if (selectedFile != null || refenceImage != null) {
+                saveImage();
+                createGallery();
+            } else {
+                refenceImage = "Images/Gallery/DefaultGallery.jpg";
+            }
+        });
+
+        Button cancelButton = new Button("Cancelar");
         cancelButton.getStyleClass().add("button-modern");
-
-        createGalleryButton.setOnAction(event -> createGallery());
-
         cancelButton.setOnAction(e -> getScene().setRoot(new ManageGalleryView()));
 
         // GIT IMAGE
@@ -190,33 +237,156 @@ public class CreateGalleryView extends BorderPane {
         // imageView.setPreserveRatio(true);
     }
 
+    private void openFileChooser() {
+        FileChooser fileChooser = new FileChooser();
+        fileChooser.setTitle("Selecionar Imagem");
+        fileChooser.getExtensionFilters().addAll(
+                new FileChooser.ExtensionFilter("Imagens", "*.png", "*.jpg", "*.jpeg"),
+                new FileChooser.ExtensionFilter("Todos os Arquivos", "*.*")
+        );
+
+        selectedFile = fileChooser.showOpenDialog(null);
+
+        if (selectedFile != null) {
+            if (isValidImage(selectedFile)) {
+                Image image = new Image(selectedFile.toURI().toString());
+                imageView.setImage(image);
+
+                refenceImage = selectedFile.toURI().toString();
+                textFieldRefenceImage.setText(refenceImage);
+            } else {
+                showAlert("Imagem Inválida", "A imagem selecionada não atende aos requisitos.");
+            }
+        }
+    }
+
+    private void viewImage() {
+        if (selectedFile != null) {
+            ImageView viewImageView = new ImageView(new Image(selectedFile.toURI().toString()));
+            javafx.scene.layout.StackPane secondaryLayout = new javafx.scene.layout.StackPane();
+            secondaryLayout.getChildren().add(viewImageView);
+
+            Scene secondScene = new Scene(secondaryLayout, 600, 500);
+
+            // New window (Stage)
+            Stage newWindow = new Stage();
+            newWindow.setTitle("Visualizar Imagem");
+            newWindow.setScene(secondScene);
+
+            // Show the new window without referencing the primary stage
+            newWindow.show();
+        } else {
+            showAlert("Sem Imagem", "Nenhuma imagem selecionada para visualização.");
+        }
+    }
+
+    private void saveImage() {
+        if (selectedFile != null) {
+            String galleryName = textFieldGalleryName.getText().trim();
+
+            if (galleryName.isEmpty()) {
+                showAlert("Nome da Galeria Vazio", "Por favor, insira um nome para a galeria antes de salvar a imagem.");
+                return;
+            }
+
+            // Verificar se uma região foi selecionada
+            if (Objects.equals(statusMenu.getValue(), "Região") || statusMenu.getValue().trim().isEmpty()) {
+                showAlert("Região Não Selecionada", "Por favor, selecione uma região antes de salvar a imagem.");
+                return;
+            }
+
+            // Pasta predefinida (pode ser ajustada conforme necessário)
+            File destinationFolder = new File("images/analise/galerias");
+
+            try {
+                // Verificar se a pasta de destino existe; se não, crie-a
+                if (!destinationFolder.exists()) {
+                    destinationFolder.mkdir();
+                }
+
+                // Nome da imagem usando o nome da galeria e a extensão do arquivo original
+                String imageFileName = galleryName + "." + getFileExtension(selectedFile.getName());
+
+                // Caminho completo para o novo arquivo
+                File destinationFile = new File(destinationFolder, imageFileName);
+
+                // Copiar o arquivo para a pasta de destino
+                Files.copy(selectedFile.toPath(), destinationFile.toPath(), StandardCopyOption.REPLACE_EXISTING);
+                // FOR NOW ALL IMAGES BEFORE ANALISE IS DEFAULT
+                //refenceImage = destinationFile.getAbsolutePath();
+
+                showAlert("Imagem Salva", "Imagem salva com sucesso em: " + destinationFile.getAbsolutePath() + "\n" +
+                        "A imagem será avaliada e posteriormente adicionada à base de dados");
+            } catch (IOException e) {
+                showAlert("Erro ao Salvar Imagem", "Ocorreu um erro ao salvar a imagem.");
+            }
+        } else {
+            // Se nenhum arquivo foi selecionado, use a imagem padrão
+            refenceImage = null;
+            textFieldRefenceImage.setText(refenceImage);
+            showAlert("Sem Imagem", "Nenhuma imagem selecionada. Será usada a imagem padrão.");
+        }
+    }
+
+    private void removeImage() {
+        imageView.setImage(null);
+        selectedFile = null;
+        refenceImage = null;
+        textFieldRefenceImage.setText(refenceImage);
+    }
+
+    private String getFileExtension(String fileName) {
+        int lastDotIndex = fileName.lastIndexOf('.');
+        if (lastDotIndex > 0 && lastDotIndex < fileName.length() - 1) {
+            return fileName.substring(lastDotIndex + 1).toLowerCase();
+        }
+        return "";
+    }
+
+    private void showAlert(String title, String content) {
+        Alert alert = new Alert(Alert.AlertType.INFORMATION);
+        alert.setTitle(title);
+        alert.setHeaderText(null);
+        alert.setContentText(content);
+        alert.showAndWait();
+    }
+
+    private boolean isValidImage(File file) {
+        long fileSize = file.length();
+        if (fileSize < 100 * 1024 || fileSize > 5 * 1024 * 1024) {
+            return false;
+        }
+
+        Image image = new Image(file.toURI().toString());
+        return image.getWidth() >= 400 && image.getHeight() >= 400 && image.getWidth() <= 2000 && image.getHeight() <= 2000;
+    }
+
     private void createGallery() {
-        //STRINGS ATTRIBUTES FOR OBJECT
+        // STRINGS ATTRIBUTES FOR OBJECT
         String name = textFieldGalleryName.getText();
         String email = textFieldEmail.getText();
         String region = statusMenu.getValue();
-        String refenceImage = "Images/Gallery/DefaultGallery.jpg";
+        refenceImage = null;
 
-        //CREATE NEW OBJECT
+        // CREATE NEW OBJECT
         Gallery newGallery = new Gallery();
         newGallery.setNameGallery(name);
         newGallery.setEmail(email);
         newGallery.setRegionName(region);
         newGallery.setReferenceImage(refenceImage);
 
-        //ADD TO DATABASE
+        // ADD TO DATABASE
         if (newGallery.getNameGallery() == null || newGallery.getNameGallery().trim().isEmpty()
-            || newGallery.getNameGallery().isBlank() || Objects.equals(statusMenu.getValue(), "Região") ||
-                statusMenu.getValue().trim().isEmpty() || statusMenu.getValue().isBlank()) {
+                || newGallery.getNameGallery().isBlank() || Objects.equals(statusMenu.getValue(), "Região")
+                || statusMenu.getValue().trim().isEmpty() || statusMenu.getValue().isBlank()) {
             System.out.println("Campo vazio. Não é possível atualizar.");
             labelSucessMensage.setText("Não foi possível atualizar!");
         } else {
-            MainCreateGallery.addGallery(newGallery);
+            MainManageGallery.addGallery(newGallery);
             labelSucessMensage.setText("Alterações efetuadas com sucesso!");
             System.out.println("atualizado com sucesso");
-
         }
-
     }
+
 
 }
